--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@types/react-dom": "^19",
     "@types/react-syntax-highlighter": "^15.5.13",
     "ai-hero-cli": "^0.2.5",
-    "evalite": "https://pkg.pr.new/mattpocock/evalite@240",
+    "evalite": "1.0.0-beta.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
