--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@ai-sdk/anthropic": "^2.0.56",
     "@ai-sdk/google": "^2.0.46",
     "@ai-sdk/react": "^2.0.115",
+    "@ai-sdk/mcp": "^0.0.8",
     "@langchain/textsplitters": "^1.0.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-collapsible": "^1.1.12",
