--- a/package.json
+++ b/package.json
@@ -51,9 +51,17 @@
     "@types/react-syntax-highlighter": "^15.5.13",
     "ai-hero-cli": "^0.2.10",
     "evalite": "1.0.0-beta.15",
+    "prettier": "^3.7.4",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
     "vitest": "^4.0.14"
+  },
+  "prettier": {
+    "semi": true,
+    "trailingComma": "es5",
+    "singleQuote": false,
+    "printWidth": 80,
+    "tabWidth": 2
   }
 }
